<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adapter_home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_Column_textview"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/adapter_name_columm"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/id_Column_textview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:text="@string/adapter_id_column"
        android:textAlignment="center"

        android:textSize="18sp" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/credit_Column_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"


        android:text="@string/adapter_credits_column"
        android:textSize="18sp" />
</LinearLayout>